<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/fans_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/session_system_notice" />

            <Button
                android:id="@+id/message_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/session_system_notice"/>

            <Button
                android:id="@+id/mentionedme_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/session_system_notice" />

            <Button
                android:id="@+id/comments_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/session_system_notice" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/fans_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/fans"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/message_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/message"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mentionme_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/mentionme"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/comments_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/comments"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/im_list_item"
            android:layout_above="@id/bottoms"/>

        <LinearLayout
            android:id="@+id/bottoms"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/bottomline1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                android:textColor="#ffffff"
                android:text="@string/bottom1" />
            <Button
                android:id="@+id/bottomline2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                android:textColor="#ffffff"
                android:text="@string/bottom2" />
            <Button
                android:id="@+id/bottomline3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                android:textColor="#ffffff"
                android:text="@string/bottom3"/>
            <Button
                android:id="@+id/bottomline4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                android:textColor="#ffffff"
                android:text="@string/bottom4" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>